# 25ws-42.17

./: .gitignore  README.md  main.ipynb  pyproject.toml
data/extra/: variables.csv
lectures/: lecture1.ipynb
